# TZStreamingClient

./: .gitignore  Android.mk  CMakeLists.txt  README.md  server.sh
App/Client/: client.py
App/Server/: key.py  server.py
App/TA/: ta_keystorage.cpp
Client/: CMakeLists.txt  Makefile  README  client.cpp  client.h  client.py  client.sh  host  main_test.cpp  run_client.sh  test
HLS_Server/: playlist.m3u8  server.sh
RA/: client.py
Server/: README  key.py  run_server.sh  server.py
aes/host/: main.c
aes/ta/: aes_ta.c
aes/ta/include/: aes_ta.h
hls-stream/test/expected/: test_variant_expected
hls-stream/testdata/: m1-all_Custom.m3u8  m2-all_Custom.m3u8  m3-all_Custom.m3u8
host/: client.c  main.c  main.cpp  main_test.c  optee_example_my_test
host/include/: client.cpp  client.h
my_test/: .gitignore
my_test/host/: Makefile  main.c
my_test/ta/: .my_test_ta.o.d  9aaaf200-2450-11e4-abe2-0002a5d5c51b.elf  9aaaf200-2450-11e4-abe2-0002a5d5c51b.ta  my_test_ta.c  ta.lds
opencv_test/: DisplayImage  DisplayImage.cpp  Makefile
ta/: .my_test_ta.o.cmd  .ta.ld.d  .user_ta_header.o.cmd  .user_ta_header.o.d  9aaaf200-2450-11e4-abe2-0002a5d5c51b.dmp  9aaaf200-2450-11e4-abe2-0002a5d5c51b.elf  9aaaf200-2450-11e4-abe2-0002a5d5c51b.map  9aaaf200-2450-11e4-abe2-0002a5d5c51b.stripped.elf  9aaaf200-2450-11e4-abe2-0002a5d5c51b.ta  Makefile  my_test_ta.c  user_ta_header_defines.h
ta/include/: my_test_ta.h
